--- a/src/main/resources/com/example/selenium/account-facebook-view.fxml
+++ b/src/main/resources/com/example/selenium/account-facebook-view.fxml
@@ -11,19 +11,19 @@
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
    <children>
-      <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" prefHeight="63.0" styleClass="header-table-line" stylesheets="@home-view-css.css">
+      <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" prefHeight="63.0" spacing="20.0" styleClass="header-table-line" stylesheets="@home-view-css.css">
          <children>
-            <Label contentDisplay="CENTER" prefWidth="100.0" text="No." textFill="WHITE">
+            <Label contentDisplay="CENTER" prefWidth="50.0" text="No." textFill="WHITE">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label prefWidth="250.0" text="FacebookID" textFill="WHITE">
+            <Label prefWidth="200.0" text="FacebookID" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label prefWidth="300.0" text="Name" textFill="WHITE">
+            <Label prefWidth="200.0" text="Name" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
@@ -38,7 +38,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label prefWidth="50.0" textFill="WHITE">
+            <Label maxWidth="1.7976931348623157E308" textFill="WHITE" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
